updates to tnrs_testfile to remove non-ascii characters (causing CRAN errors)

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 ===============
+TNRS 0.3.1
+===============
+
+## NEW FEATURES
+* Added progress bar when downloading multiple  batches of records
+
+===============
 TNRS 0.3.0
 ===============
 
