--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,23 @@
 ===============
+# TNRS 0.3.3
+===============
+
+## NEW FEATURES
+
+## Bug Fixes
+
+
+===============
+# TNRS 0.3.2
+===============
+
+## NEW FEATURES
+
+## Bug Fixes
+* Fixed problems with testing causing CRAN checks to fail
+
+
+===============
 # TNRS 0.3.1
 ===============
 
