updates to default settings

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,14 @@
 ===============
+# TNRS 0.3.4
+===============
+
+## NEW FEATURES
+
+* Updated default settings per a pending TNRS API update.
+
+## Bug Fixes
+
+===============
 # TNRS 0.3.3
 ===============
 
