--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,14 @@
 ===============
+# TNRS 0.3.5
+===============
+
+## NEW FEATURES
+
+## Bug Fixes
+
+* Updated tests per new API options
+
+===============
 # TNRS 0.3.4
 ===============
 
