--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,9 @@
 ## Bug Fixes
 
 * Updated tests per new API options
+* removed documentation for '...' from TNRS_core, as we aren't using this anymore. 
+
+
 
 ===============
 # TNRS 0.3.4
