--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,14 @@
 ===============
+# TNRS 0.3.6
+===============
+
+## NEW FEATURES
+* A new functions, TNRS_synonyms, has been added. This returns all synonyms for a single species from a single source.
+
+## Bug Fixes
+
+
+===============
 # TNRS 0.3.5
 ===============
 
