--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,14 @@
 ===============
+# TNRS 0.3.7
+===============
+
+## NEW FEATURES
+
+## Bug Fixes
+
+* Added code to remove pipes from species names, as these cause errors.
+
+===============
 # TNRS 0.3.6
 ===============
 
